package org.firstinspires.ftc.teamcode;

import com.qualcomm.robotcore.eventloop.opmode.LinearOpMode;
import com.qualcomm.robotcore.eventloop.opmode.TeleOp;

import org.firstinspires.ftc.teamcode.movement.MoveWithGyro;

@TeleOp
public class TeleOP extends LinearOpMode {

    private MoveWithGyro movement;


        @Override
        public void runOpMode(){



        }
}
